<resources>
    <string name="app_name">WorkWork</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_worklist">Work List</string>
    <string name="title_summary">Summary</string>
    <string name="title_calculator">Calculator</string>
    <string name="workDetails_totalTime">Total work time</string>
    <string name="workDetails_averageTime">Average work time per day</string>
    <string name="workDetails_totalSalary">Total salary</string>
    <string name="workDetails_averageHourlyWage">Average hourly wage</string>
    <string name="workDetails_daysWork">Days in work</string>
    <string name="workDetails_hoursWorked">Worked hours</string>
    <string name="format_hour" translatable="false">%1$s h</string>
    <string name="format_pln" translatable="false">%1$s %2$s</string>
    <string name="format_plnPerHour" translatable="false">%1$s %2$s/h</string>
    <string name="format_hourPerDay" >%1$s h/day</string>
    <string name="global_time" >Time</string>
    <string name="global_timeFrom">From</string>
    <string name="global_timeTo" >To</string>
    <string name="global_timeAmount">Amount of time</string>
    <string name="global_date" >Date</string>
    <string name="global_salary">Salary</string>
    <string name="global_salaryPerHour">Per hour</string>
    <string name="global_salaryForAll">For all</string>
    <string name="global_additionalInfo" >Additional information</string>
    <string name="global_add">Add</string>
    <string name="global_cancel">Cancel</string>
    <string name="title_addWorkTime">Add to %1$s</string>
    <string name="format_date" translatable="false">%1$02d.%2$02d.%3$d</string>
    <string name="format_time" translatable="false">%1$02d:%2$02d</string>
    <string name="match_time" translatable="false">\\d{2}:\\d{2}</string>
    <string name="global_hour">Hour</string>
    <string name="global_minute">Minute</string>
    <string name="global_ok">OK</string>
    <string name="format_hourWithSuffix" translatable="false">%1$dh</string>
    <string name="format_minuteWithSuffix" translatable="false">%1$dm</string>
    <string name="format_timeWithSuffixes" translatable="false">%1$dh %2$dm</string>
    <string name="match_timeWithSuffixes" translatable="false">\\d+h \\d+m</string>
    <string name="error_unknown">An unknown error occurred.</string>
    <string name="format_day">%1$d day</string>
    <string name="format_days">%1$d days</string>
    <string name="format_timeRange" translatable="false">(%1$s - %2$s)</string>
    <string name="global_title">Title</string>
    <string name="global_defaultSettings">Default settings</string>
    <string name="global_timeToNow">back from <b>now</b></string>
    <string name="title_addWork">Add to work list</string>
    <string name="separator" translatable="false">-</string>
    <string name="drop_down" translatable="false">Drop down</string>
    <string name="format_salaryForAll">%1$s %2$s per %3$s hour</string>
    <string name="format_salaryPerHour">%1$s %2$s per hour</string>
    <string name="error_emptyField">%1$s field can\'t be empty!</string>
    <string name="error_tooShortField">%1$s field must contain at least %2$d chars!</string>
    <string name="action_open">Open</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="action_addWorkTime">Add hours</string>
    <string name="title_updateWork">Update %1$s</string>
    <string name="global_update">Update</string>
    <string name="alert_areYouSure">Are you sure?</string>
    <string name="match_date" translatable="false">\\d{2}.\\d{2}.\\d{4}</string>
    <string name="global_changeCurrency">Change currency</string>
    <string name="alert_changeCurrency">This will applied to every worked hours in this work. Do you want to continue?</string>
    <string name="global_yes">Yes</string>
    <string name="input_taxYear">Tax year</string>
    <string name="input_calculate">Submit</string>
    <string name="input_26old">26 years old</string>
    <string name="input_workLocation">Work in home location</string>
    <string name="input_enterSalary">Enter salary</string>
    <string name="input_salaryZero">Salary must be greater than 0 PLN</string>
    <string name="global_netto">Net</string>
    <string name="global_brutto">Gross</string>
    <string name="global_moneyWithCurrency" translatable="false">%1$.2f PLN</string>
    <string name="global_details">Details</string>
    <string name="calcResult_bruttoSalary">Gross income</string>
    <string name="calcResult_pensionInsurance">Pension insurance</string>
    <string name="calcResult_sicknessInsurance">Sickness insurance</string>
    <string name="calcResult_healthInsurance">Health insurance</string>
    <string name="calcResult_disabilityInsurance">Disability insurance</string>
    <string name="calcResult_gettingIncomeAdvance">Getting income advance</string>
    <string name="calcResult_nettoSalary">Net income</string>
    <string-array name="input_salaryType">
        <item>Gross</item>
        <item>Net</item>
    </string-array>
    <string-array name="input_taxYear">
        <item>2019</item>
    </string-array>
</resources>
