<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_workListElement_open"
        android:orderInCategory="1"
        android:title="@string/action_open"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_workListElement_add"
        android:orderInCategory="2"
        android:title="@string/action_addWorkTime"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_workListElement_edit"
        android:orderInCategory="2"
        android:title="@string/action_edit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_workListElement_delete"
        android:orderInCategory="3"
        android:title="@string/action_delete"
        app:showAsAction="never" />
</menu>