<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group >
        <item
            android:id="@+id/action_workDetails_add"
            android:orderInCategory="1"
            android:title="@string/action_addWorkTime"
            android:icon="@drawable/ic_add_black_24dp"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_workDetails_edit"
            android:orderInCategory="2"
            android:title="@string/action_edit"
            android:icon="@drawable/ic_edit_black_24dp"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_workDetails_delete"
            android:orderInCategory="3"
            android:title="@string/action_delete"
            android:icon="@drawable/ic_delete_black_24dp"
            app:showAsAction="ifRoom" />
    </group>
</menu>