<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/editText_addWork_title"
            android:padding="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/global_title"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_addWork_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ems="6"
            android:inputType="text"
            android:textAlignment="center" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:padding="4dp"
        android:text="@string/global_defaultSettings"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/global_time"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_addWork_rangeTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp"
            android:checked="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:labelFor="@id/editText_addWork_from"
            android:text="@string/global_timeFrom" />

        <EditText
            android:id="@+id/editText_addWork_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:ems="5"
            android:focusable="false"
            android:inputType="time"
            tools:ignore="KeyboardInaccessibleWidget" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:labelFor="@id/editText_addWork_to"
            android:text="@string/global_timeTo" />

        <EditText
            android:id="@+id/editText_addWork_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:ems="5"
            android:focusable="false"
            android:inputType="time"
            tools:ignore="KeyboardInaccessibleWidget" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_addWork_toNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp" />

        <EditText
            android:id="@+id/editText_addWork_toNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="4"
            android:focusable="false"
            android:inputType="time"
            tools:ignore="KeyboardInaccessibleWidget" />

        <TextView
            android:id="@+id/textView_addWork_toNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:labelFor="@id/editText_addWork_toNow"
            android:text="@string/global_timeToNow" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_addWork_amountTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="6dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:labelFor="@id/editText_addWork_amount"
            android:text="@string/global_timeAmount" />

        <EditText
            android:id="@+id/editText_addWork_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:ems="4"
            android:focusable="false"
            android:inputType="time"
            tools:ignore="KeyboardInaccessibleWidget" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/editText_addWork_salary"
            android:padding="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/global_salary"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editText_addWork_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="12dp"
            android:layout_weight="1"
            android:ems="4"
            android:inputType="numberDecimal" />

        <Spinner
            android:id="@+id/spinner_addWork_currency"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:entries="@array/global_currencies" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioGroup_addWork_salaryMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton_addWork_salaryPerHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:checked="true"
            android:text="@string/global_salaryPerHour" />

        <RadioButton
            android:id="@+id/radioButton_addWork_salaryForAll"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/global_salaryForAll" />

    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:labelFor="@id/editText_addWork_info"
        android:padding="4dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:text="@string/global_additionalInfo"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editText_addWork_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_addWork_cancel"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/global_cancel" />

        <Button
            android:id="@+id/button_addWork_add"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp"
            android:text="@string/global_add" />
    </LinearLayout>

</LinearLayout>