<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.pregiel.workwork.fragments.WorkDetailsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:divider="?attr/dividerHorizontal"
            android:dividerPadding="5dp"
            android:padding="5dp"
            android:showDividers="middle"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:text="@string/workDetails_totalTime"
                    android:textSize="@dimen/workDetails_labelSize" />

                <TextView
                    android:id="@+id/textView_workDetails_totalTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="12h"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/workDetails_labelDescSize" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:text="@string/workDetails_averageTime"
                    android:textSize="@dimen/workDetails_labelSize" />

                <TextView
                    android:id="@+id/textView_workDetails_averageTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="2h"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/workDetails_labelDescSize" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:text="@string/workDetails_daysWork"
                    android:textSize="@dimen/workDetails_labelSize" />

                <TextView
                    android:id="@+id/textView_workDetails_daysWork"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="6 dni"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/workDetails_labelDescSize" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:text="@string/workDetails_totalSalary"
                    android:textSize="@dimen/workDetails_labelSize" />

                <TextView
                    android:id="@+id/textView_workDetails_totalSalary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="240 zł"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/workDetails_labelDescSize" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="4dp"
                android:paddingTop="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="8dp"
                    android:text="@string/workDetails_averageHourlyWage"
                    android:textSize="@dimen/workDetails_labelSize" />

                <TextView
                    android:id="@+id/textView_workDetails_averageHourlyWage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="8dp"
                    android:text="20 zł"
                    android:textAlignment="textEnd"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/workDetails_labelDescSize" />
            </TableRow>

        </TableLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:paddingEnd="2dp"
            android:paddingStart="2dp"
            android:paddingTop="6dp"
            android:text="@string/workDetails_hoursWorked"
            android:textAlignment="center"
            android:textColor="@color/secondaryColor"
            android:textSize="22sp" />

        <ListView
            android:id="@+id/listView_workDetails_hoursWorked"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_workDetails_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="24dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_black_24dp"
        android:tint="@color/secondaryTextColor"
        app:backgroundTint="@color/secondaryColor" />

</FrameLayout>
